# pick_rs

./: .gitignore  Cargo.toml  build.rs  choices.txt
src/: app.rs  colours.rs  layout.rs  main.rs
