[package]
name = "pick_rs"
version = "0.1.0"
authors = ["lf- <lf-@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true


[dependencies.piston2d-graphics]
version = "*"
features = ["glyph_cache_rusttype"]


[dependencies]
piston = "0.49.0"
piston_window = "0.105.0"
piston-gfx_texture = "0.40.0"
gfx_device_gl = "0.16.2"
strsim = "0.10.0"
clipboard = "0.5.0"


[dependencies.pistoncore-glutin_window]
  git = "https://github.com/PistonDevelopers/glutin_window"
